--- a/index.html
+++ b/index.html
@@ -155,16 +155,13 @@
               熟悉HTML5,CSS,Javascript,jQuery,Ajax,Bootstrap,Layui前端技术</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              熟悉Spring全家桶,Mybatis,Hibernate框架和开源技术</li>
+              熟悉SpringBoot,SpringCloud,Spring-MVC,Mybatis,Hibernate框架和开源技术</li>
+          <li>
+              <i class="fa-li fa fa-check"></i>
+              熟悉小程序开发，公众号开发，企业微信开发</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               了解Kafka,RocketMQ的使用</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              了解Linux,Windows Server</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              了解Nginx使用</li>
           </ul>
         </div>
       </section>
@@ -335,39 +332,6 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">2018.2-2018.5</span>
             </div>
-          </div>
-        </div>
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">o2o汽车快修平台（外包）</h3>
-            <div class="subheading mb-3">项目经理</div>
-            <ol>
-              <li><h6>项目描述</h6>
-                <p>该项目是传统行业（汽车维修）和互联网结合的项目，通过平台可以快速匹配客户和厂商，客户和
-                  技师，实现更高效的服务；同时，平台提供统计数据，为修配厂等服务商提供更科学的决策依据。</p>
-              </li>
-              <li><h6>功能概述</h6>
-                <ol>
-                  <li>微信公众号（客户使用），APP（技师使用），web平台（服务商使用）</li>
-                  <li>订单管理系统，包括订单生成api，订单人工派发，订单自动派发，订单评价系统</li>
-                  <li>积分商城系统，包括积分管理，商品管理，库存管理，商品兑换api</li>
-                  <li>客服IM系统</li>
-                  <li>报表系统（基于echarts）</li>
-                </ol>
-              </li>
-              <li><h6>项目职责</h6>
-                <ol>
-                  <li>负责项目架构设计，数据库结构设计</li>
-                  <li>负责订单、商城系统开发，包含web端和api</li>
-                  <li>负责IM系统开发</li>
-                  <li>负责报表功能开发</li>
-                </ol>
-              </li>
-              <li><h6>技术栈</h6><p> JFinal;websocket;MySQL;echarts;</p></li>
-            </ol>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2018.2-2018.5</span>
           </div>
         </div>
 
